add gcode editor
